--- a/src/app/pages/librairie/librairie.component.html
+++ b/src/app/pages/librairie/librairie.component.html
@@ -4,10 +4,10 @@
 <p>
   @for (b of books; track b; let i = $index) {
     <ul>
-      <li [ngClass]="{'souligne' : b.isRead}">{{b.title}}</li>
-      <li>{{b.author}}</li>
-      <li>{{b.isRead}}</li>
-      <li>{{ b.title | read: b.isRead }}</li>
+      <li [ngClass]="{'souligne' : b.isRead}">Titre : {{b.title}}</li>
+      <li>Auteur : {{b.author}}</li>
+      <!-- <li>{{b.isRead}}</li> -->
+      <li>Lu : {{ b.title | read: b.isRead }}</li>
       <li><button (click)="toggleRead(b)">Changer le statut</button></li>
       <br>
     </ul>
