--- a/src/app/pages/librairie/librairie.component.css
+++ b/src/app/pages/librairie/librairie.component.css
@@ -1,3 +1,48 @@
 .souligne {
   text-decoration: underline
 }
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 30px;
+}
+
+.card {
+  padding: 20px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(128, 128, 128, 0.48);
+}
+
+.status {
+  padding: 5px;
+  margin-top: 5px;
+  border-radius: 5px;
+}
+
+.champs {
+  display: flex;
+  justify-content: space-around;
+}
+
+.submit {
+  padding: 5px 25px;
+}
+
+form {
+border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(128, 128, 128, 0.48);
+  padding: 10px;
+  margin: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+input {
+  padding: 5px 25px;
+  margin: 0 5px;
+
+}
+
+
