--- a/src/app/pages/librairie/librairie.component.css
+++ b/src/app/pages/librairie/librairie.component.css
@@ -34,7 +34,7 @@ form {
 border-radius: 5px;
   box-shadow: 2px 2px 5px rgba(128, 128, 128, 0.48);
   padding: 10px;
-  margin: 20px;
+  margin: 20px 0;
   display: flex;
   justify-content: space-around;
 }
