--- a/src/app/pages/pokemon/pokemon.component.css
+++ b/src/app/pages/pokemon/pokemon.component.css
@@ -47,7 +47,7 @@ fieldset {
 legend {
   font-weight: bold;
   color: #444;
-  padding: 0 10px;
+  padding: 0 15px;
 }
 
 button[type="button"] {
@@ -58,6 +58,7 @@ button[type="button"] {
   border-radius: 5px;
   cursor: pointer;
   margin-top: 10px;
+  transition: all 0.2s ease-in;
 }
 
 button[type="button"]:hover {
@@ -74,6 +75,8 @@ button[type="submit"] {
   font-size: 20px;
   margin-top: 20px;
   width: 100%;
+  transition: all 0.2s ease-in;
+
 }
 
 button[type="submit"]:hover {
