--- a/src/app/pages/pokemon/pokemon.component.html
+++ b/src/app/pages/pokemon/pokemon.component.html
@@ -65,7 +65,7 @@
   <h2>Mes pokemons</h2>
 <div class="grille">
   @for (p of pokemons; track p) {
-    <app-pokemon-card [pokemon]="p"></app-pokemon-card>
+    <app-pokemon-card [pokemon]="p" (evenement)="supprimerPokemon($event)"></app-pokemon-card>
   }
 </div>
 
