--- a/src/app/components/pokemon-card/pokemon-card.component.css
+++ b/src/app/components/pokemon-card/pokemon-card.component.css
@@ -10,6 +10,8 @@ article {
 article h3 {
   color: #ff4500;
   text-align: center;
+  text-decoration: underline;
+  text-transform: capitalize;
 }
 
 article p {
@@ -51,4 +53,13 @@ article div span {
 
 article div p:last-child {
   font-style: italic;
+}
+
+button {
+  width: 100%;
+  background-color: red;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
 }
