--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -23,4 +23,6 @@
     <p>{{pokemon.zone.nom_zone}}</p>
     <p>{{pokemon.zone.region_zone}}</p>
   </div>
+
+  <button (click)="deletePokemon()">Supprimer</button>
 </article>
