--- a/src/app/pages/pokemon/pokemon.component.css
+++ b/src/app/pages/pokemon/pokemon.component.css
@@ -86,5 +86,6 @@ button[type="submit"]:hover {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 30px;
+  margin-bottom: 50px;
 }
 
