--- a/src/app/components/pokemon-card/pokemon-card.component.css
+++ b/src/app/components/pokemon-card/pokemon-card.component.css
@@ -37,11 +37,6 @@ article div div p:first-child {
   font-weight: bold;
 }
 
-article div div p:last-child {
-  color: #ff4500;
-  font-weight: bold;
-}
-
 article div span {
   display: inline-block;
   margin-right: 10px;
@@ -51,15 +46,15 @@ article div span {
   color: #333;
 }
 
-article div p:last-child {
-  font-style: italic;
-}
+
 
 button {
   width: 100%;
-  background-color: red;
+  background-color: #ff4500;
   padding: 10px;
   border: none;
   border-radius: 5px;
   color: #fff;
+  font-weight: bold;
 }
+
