--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -12,5 +12,8 @@
     <li>
       <a routerLink="/pokemon">Pokemon</a>
     </li>
+    <li>
+      <a routerLink="/pokedex">Pokedex</a>
+    </li>
   </ul>
 </nav>
