--- a/src/app/components/pokemon-card/pokemon-card.component.css
+++ b/src/app/components/pokemon-card/pokemon-card.component.css
@@ -2,7 +2,7 @@ article {
   border: 2px solid #333;
   border-radius: 10px;
   padding: 20px;
-  max-width: 400px;
+  max-width: 700px;
   background-color: #f9f9f9;
   font-family: Arial, sans-serif;
 }
@@ -46,8 +46,6 @@ article div span {
   color: #333;
 }
 
-
-
 button {
   width: 100%;
   background-color: #ff4500;
@@ -56,5 +54,9 @@ button {
   border-radius: 5px;
   color: #fff;
   font-weight: bold;
+}
+
+.attaques {
+  display: flex;
 }
 
