--- a/src/app/components/pokemon-card/pokemon-card.component.css
+++ b/src/app/components/pokemon-card/pokemon-card.component.css
@@ -29,7 +29,6 @@ article h4 {
 article div div {
   margin-bottom: 10px;
   padding: 10px;
-  border-left: 4px solid #ff4500;
   background-color: #f2f2f2;
 }
 
@@ -54,9 +53,12 @@ button {
   border-radius: 5px;
   color: #fff;
   font-weight: bold;
+  margin: 5px;
 }
 
-.attaques {
-  display: flex;
-}
+
+
+
+
+
 
