--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -13,7 +13,10 @@
       <a routerLink="/pokemon">Pokemon</a>
     </li>
     <li>
-      <a routerLink="/pokedex">Pokedex</a>
+      <a routerLink="/pokedex">Pokedex {{lengthPokedex}}</a>
+    </li>
+    <li>
+      <a routerLink="/openclose">OpenClose</a>
     </li>
   </ul>
 </nav>
