--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -15,8 +15,14 @@
     <li>
       <a routerLink="/pokedex">Pokedex {{lengthPokedex}}</a>
     </li>
+<!--    <li>-->
+<!--      <a routerLink="/openclose">OpenClose</a>-->
+<!--    </li>-->
     <li>
-      <a routerLink="/openclose">OpenClose</a>
+      <a routerLink="/trash">Trash</a>
+    </li>
+    <li>
+      <a routerLink="/chuck">Chuck Norris</a>
     </li>
   </ul>
 </nav>
