--- a/src/app/pages/chuck-norris/chuck-norris.component.html
+++ b/src/app/pages/chuck-norris/chuck-norris.component.html
@@ -1,7 +1,10 @@
-<p>chuck-norris works!</p>
+<main>
+
+<h1>Chuck Norris fact :</h1>
 
 <p><button (click)="ngOnInit()">Random</button></p>
 
 <p>{{fact}}</p>
+</main>
 
 
